--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,7 @@ gradle-app.setting
 **/build/
 
 # End of https://www.gitignore.io/api/java,gradle,java-web,intellij+iml
+
+# local
+application-local.yml
+logs
