--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,11 @@
+server:
+  port: 8080
+  servlet:
+    session:
+      timeout: 21600
+      cookie:
+        max-age: 21600
+
 spring:
   profiles:
     active: local
