--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,10 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-amqp'
-    compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
-    compile 'io.github.openfeign:feign-okhttp'
+    compile 'org.springframework.boot:spring-boot-starter-mail'
+    compile 'org.freemarker:freemarker'
     compile 'net.logstash.logback:logstash-logback-encoder:5.1'
-    compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2'
-    compile 'mysql:mysql-connector-java:8.0.15'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 // to build executable jar
