--- a/application.yml
+++ b/application.yml
@@ -20,6 +20,20 @@ spring:
     username: guest
     password: guest
     exchange: exchange.xapp
+  mail:
+    default-encoding: UTF-8
+    host: smtp.gmail.com
+    username: ryanluoxu@gmail.com
+    password: rmmoalxkhfvcgksw
+    port: 465
+    protocol: smtp
+    test-connection: false
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 logging:
   config: logback-spring.xml
